@@ -412,7 +412,6 @@ __unixify (const char *ro_path, int unixify_flags, char *buffer,
       if (one_dot (input))
 	{
 	  char name[256];
-	  char *slash;
 
 	  /* We've processed enough of the filename to be left with the
 	     following combinations:
@@ -423,13 +422,8 @@ __unixify (const char *ro_path, int unixify_flags, char *buffer,
 	  input += strlen (tempbuf) + 1;
 	  get_directory_name (input, name);
 
-	  /* If either part contains a / then we don't have a valid prefix */
-	  slash = strchr (tempbuf, '/');
-	  if (slash == NULL)
-	    slash = strchr (name, '/');
-
 	  if (!(unixify_flags & __RISCOSIFY_NO_REVERSE_SUFFIX)
-	      && is_prefix (name) && (slash == NULL))
+	      && is_prefix (name))
 	    {
 	      /* Method 1.
 	         name contains the prefix.
@@ -437,11 +431,11 @@ __unixify (const char *ro_path, int unixify_flags, char *buffer,
 	      out = add_directory_and_prefix (out, tempbuf, name);
 	    }
 	  else if (!(unixify_flags & __RISCOSIFY_NO_REVERSE_SUFFIX)
-		   && is_prefix (tempbuf) && (slash == NULL))
+		   && is_prefix (tempbuf) && (strchr (name, '/') == NULL))
 	    {
 	      /* Method 2.
 	         tempbuf contains the prefix.
-	         name contains the filename.  */
+	         name contains the filename, and doesn't have a '/' in it.  */
 	      out = add_directory_and_prefix (out, name, tempbuf);
 	    }
 	  else
